--- a/TiendaServicios/TiendaServicios.Api.CarritoCompras/TiendaServicios.Api.CarritoCompra.csproj
+++ b/TiendaServicios/TiendaServicios.Api.CarritoCompras/TiendaServicios.Api.CarritoCompra.csproj
@@ -13,6 +13,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Servicios\" />
   </ItemGroup>
 
 
