--- a/TiendaServicios/docker-compose.yml
+++ b/TiendaServicios/docker-compose.yml
@@ -7,6 +7,12 @@ services:
       context: .
       dockerfile: TiendaServicios.Api.Autor/Dockerfile
 
+  tiendaservicios.api.libro:
+    image: ${DOCKER_REGISTRY-}tiendaserviciosapilibro
+    build:
+      context: .
+      dockerfile: TiendaServicios.Api.Libro/Dockerfile
+
 networks:
   default:
     external:
