Docker for CarritoCompra + MySql

--- a/TiendaServicios/docker-compose.yml
+++ b/TiendaServicios/docker-compose.yml
@@ -13,7 +13,14 @@ services:
       context: .
       dockerfile: TiendaServicios.Api.Libro/Dockerfile
 
+  tiendaservicios.api.carritocompra:
+    image: ${DOCKER_REGISTRY-}tiendaserviciosapicarritocompra
+    build:
+      context: .
+      dockerfile: TiendaServicios.Api.CarritoCompras/Dockerfile
+
 networks:
   default:
     external:
       name: microservicenet
+
