--- a/TiendaServicios/docker-compose.yml
+++ b/TiendaServicios/docker-compose.yml
@@ -19,8 +19,15 @@ services:
       context: .
       dockerfile: TiendaServicios.Api.CarritoCompras/Dockerfile
 
+  tiendaservicios.api.gateway:
+    image: ${DOCKER_REGISTRY-}tiendaserviciosapigateway
+    build:
+      context: .
+      dockerfile: TiendaServicios.Api.Gateway/Dockerfile
+
 networks:
   default:
     external:
       name: microservicenet
+
 
