Abstract Impl QueueBus

--- a/TiendaServicios/TiendaServicios.Api.Libro/appsettings.json
+++ b/TiendaServicios/TiendaServicios.Api.Libro/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConexionDB": "Server=b7292d3069d5;Initial Catalog=tiendalibro;User Id=sa;Password=Microservice*"
+  }
 }
