--- a/TiendaServicios/TiendaServicios.Api.Autor/appsettings.json
+++ b/TiendaServicios/TiendaServicios.Api.Autor/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConexionDatabase": "Server=127.0.0.1;Database=tiendalibroautor;Port=5432; User Id=postgres;Password=tiendaservicios;",
+    "ConexionDatabaseDocker": "Server=postgres-tiendaservicio;Database=tiendalibroautor;Port=5432; User Id=postgres;Password=microservice*;"
+  }
 }
