--- a/TiendaServicios/TiendaServicios.Api.CarritoCompras/appsettings.json
+++ b/TiendaServicios/TiendaServicios.Api.CarritoCompras/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Services": {
+    "Libros": "http://localhost:62777",
+    "Autores": "http://localhost:52822"
+  },
+  "ConnectionStrings": {
+    "ConexionDatabase": "server=mysql-microservice; port=3306;database=carritocompra;user=root;password=Microservice*;old guids=true;default command timeout=800;"
+  }
 }
